add task solution

--- a/src/styles/blocks/actual_events.scss
+++ b/src/styles/blocks/actual_events.scss
@@ -12,13 +12,12 @@
   }
 
   &_title {
+    font-family: Montserrat, sans-serif;
     text-align: center;
-    font-family: Montserrat;
-    font-weight: 700;
     font-size: 36px;
+    font-weight: 700;
     line-height: 100%;
     letter-spacing: 0%;
-    text-align: center;
 
     @include onTablet {
       font-size: 48px;
@@ -55,11 +54,17 @@
   }
 
   &_block {
-
     &_image {
       width: 100%;
       grid-column: 1 / 8;
-      margin-right: 130px;
+
+      transition: transform 0.3s ease;
+
+      @include onTablet {
+        &:hover {
+          transform: scale(1.1);
+        }
+      }
     }
 
     &-for-grid {
@@ -82,7 +87,7 @@
       }
 
       &-text {
-        font-family: IBM Plex Sans;
+        font-family: 'IBM Plex Sans', sans-serif;
         font-weight: 500;
         font-size: 16px;
         line-height: 100%;
@@ -93,22 +98,20 @@
         @include onTablet {
           font-size: 14px;
         }
-
       }
 
       &-time {
-        font-family: IBM Plex Sans;
+        font-family: 'IBM Plex Sans', sans-serif;
         font-weight: 700;
         font-size: 16px;
         line-height: 100%;
         letter-spacing: 0%;
         margin: 0;
-        color: #1A5A4C;
+        color: #1a5a4c;
 
         @include onTablet {
           font-size: 14px;
         }
-
       }
     }
 
@@ -125,9 +128,8 @@
         margin-top: 30px;
       }
 
-
       &-text {
-        font-family: Montserrat;
+        font-family: Montserrat, sans-serif;
         font-weight: 400;
         font-size: 28px;
         line-height: 100%;
@@ -142,7 +144,7 @@
       &-box {
         width: 10px;
         height: 10px;
-        background: #F14A27;
+        background: #f14a27;
         line-height: 100%;
         margin-left: 15px;
         margin-top: 12px;
@@ -155,12 +157,12 @@
     }
 
     &_text {
-      font-family: IBM Plex Sans;
+      font-family: 'IBM Plex Sans', sans-serif;
       font-weight: 300;
       font-size: 16px;
       line-height: 150%;
       letter-spacing: 0%;
-      color: #4E4E4E;
+      color: #4e4e4e;
       margin-top: 10px;
       margin-bottom: 0;
 
@@ -175,4 +177,3 @@
     }
   }
 }
-
