--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,10 @@
-@import url(./blocks/header.scss);
-@import url(./blocks/actual_events.scss);
-@import url(./blocks/menu.scss);
-@import url(./blocks/lection.scss);
+@import "./blocks/header";
+@import "./blocks/actual_events";
+@import "./blocks/menu";
+@import "./blocks/lection";
+@import "./blocks/gallery";
+@import "./blocks/follow";
+@import "./blocks/footer";
 
 @import './utils/mixins';
 
@@ -18,10 +21,10 @@ body {
   background: $c-gray;
   margin: 0;
   overflow-x: hidden;
+  background-color: #fff;
 
   &:has(.menu:target) {
     overflow: hidden;
     background-color: rgba(0, 0, 0, 0.5);
   }
 }
-
