created the relevance-events section

--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -18,13 +18,22 @@ body:has(aside:target) {
 .section__title {
   margin: 0;
   margin-bottom: 40px;
+  text-align: center;
+
+  @include on-tablet {
+    margin-bottom: 48px;
+    text-align: left;
+    font-size: 48px;
+  }
+
+  @include on-desktop {
+    margin-bottom: 56px;
+  }
 
   font-family: Montserrat, sans-serif;
   font-weight: 700;
   font-size: 36px;
   line-height: 100%;
-
-  text-align: center;
 }
 
 
