--- a/src/styles/blocks/relevance.scss
+++ b/src/styles/blocks/relevance.scss
@@ -1,12 +1,38 @@
 .relevance {
   &__image {
     width: 100%;
-    height: 210px;
 
-    object-fit: cover;
+    @include on-desktop {
+      width: 670px;
+    }
+  }
+
+  &__section {
+    margin-bottom: 60px;
 
     @include on-tablet {
-      height: 520px;
+      margin-bottom: 64px;
+    }
+
+    @include on-desktop {
+      margin-bottom: 104px;
+
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+  }
+
+  &__info {
+    margin-top: 16px;
+
+    @include on-tablet {
+      width: 460px;
+      margin-top: 40px;
+    }
+
+    @include on-desktop {
+      width: 370px;
     }
   }
 
@@ -14,9 +40,16 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+
+    @include on-tablet {
+      justify-content: flex-start;
+    }
   }
 
   &__event {
+    width: 100px;
+    margin: 0;
+
     font-family: "IBM Plex Sans", sans-serif;
     font-weight: 500;
     font-size: 16px;
@@ -25,26 +58,53 @@
   }
 
   &__date {
+    margin: 0;
+
     font-family: "IBM Plex Sans", sans-serif;
     font-weight: 700;
     font-size: 16px;
     line-height: 150%;
     color: #1A5A4C;
+
+    @include on-tablet {
+      margin: 0;
+    }
   }
 
   &__header {
+    margin: 10px 0;
+
     font-family: Montserrat, sans-serif;
     font-weight: 400;
     font-size: 28px;
     line-height: 100%;
     color: #0F0E08;
+
+    @include on-tablet {
+      margin: 30px 0 15px;
+      font-size: 36px;
+    }
+  }
+
+  &__square {
+    width: 10px;
+    margin-left: 3px;
+    margin-bottom: 3px;
+
+    @include on-tablet {
+      width: 15px;
+      margin-left: 9px;
+    }
   }
 
   &__text {
+    margin: 0;
+
     font-family: "IBM Plex Sans", sans-serif;
     font-weight: 300;
     font-size: 16px;
     line-height: 150%;
+    letter-spacing: 0;
     color: #4E4E4E;
   }
 }
