add task solution

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,6 +12,10 @@
 @import 'fonts';
 @import 'typography';
 
+html {
+  scroll-behavior: smooth;
+}
+
 a {
   text-decoration: none;
   cursor: pointer;
