add task solution

--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -127,6 +127,18 @@
 
       &-main {
         margin: 0;
+
+        &-href {
+          transition: transform 0.3s ease;
+          display: inline-block;
+
+          @include onTablet {
+            &:hover {
+              transform: scale(1.05);
+            }
+          }
+
+        }
       }
     }
   }
@@ -179,18 +191,10 @@
       margin: 0;
       padding: 0;
 
-      // @include onTablet {
-      //   padding: 0;
-      // }
-
       &-block {
         display: flex;
         flex-direction: row;
         margin-bottom: 20px;
-
-        // @include onDesktop {
-        //   margin-bottom: 30px;
-        // }
       }
 
       &-text {
@@ -208,12 +212,6 @@
         @include onTablet {
           width: 210px;
         }
-
-        // @include onDesktop {
-        //   font-size: 22px;
-        //   margin-right: 30px;
-        //   width: 169px;
-        // }
       }
     }
   }
