add task solution

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,18 @@
 @import 'utils';
-@import 'fonts';
 @import 'typography';
-
-body {
-  background: $c-gray;
-}
+@import './blocks/page';
+@import './blocks/icons';
+@import './blocks/top-bar';
+@import './blocks/header';
+@import './blocks/nav';
+@import './blocks/shedule';
+@import './blocks/menu';
+@import './blocks/section-title';
+@import './blocks/ticket';
+@import './blocks/event';
+@import './blocks/lecture';
+@import './blocks/actual-events';
+@import './blocks/gallery';
+@import './blocks/subscription';
+@import './blocks/footer';
+@import './blocks/contacts';
