--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,5 @@
-$c-gray: #eee;
+$c-white: #fff;
+$tablet-min-width: 576px;
+$desktop-min-width: 1024px;
+$secondary-color: #1a5a4c;
+$main-color: #0f0e08;
