--- a/src/styles/block/sign-up.scss
+++ b/src/styles/block/sign-up.scss
@@ -1,4 +1,4 @@
-.sing-up {
+.sign-up {
   padding-top: 100px;
 
   @include tablet {
@@ -11,7 +11,7 @@
 
   &__wrapper {
     background-color: rgba(0, 0, 0, 0.75);
-    background-image: url('../images/sing-up/sing-up.webp');
+    background-image: url('../images/sign-up/sign-up.webp');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
