created the info element from transition section for mobile version

--- a/src/styles/blocks/transition.scss
+++ b/src/styles/blocks/transition.scss
@@ -1,3 +1,71 @@
 .transition {
-  margin: 0;
+  &__image {
+    width: 100%;
+  }
+
+  &__info {
+    box-sizing: border-box;
+    margin: 0 20px;
+    padding: 20px 0;
+    background-color: #61e13d;
+
+    // z-index: 99;
+
+    @include on-tablet {
+      width: 570px;
+      margin: 0 auto;
+      padding: 45px 100px 50px;
+    }
+  }
+
+  &__time {
+    padding: 0 21px;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  &__event {
+    margin: 0;
+
+    font-family: "IBM Plex Sans", sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 100%;
+    color: #687480;
+  }
+
+  &__date {
+    margin: 0;
+
+    font-family: "IBM Plex Sans", sans-serif;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 150%;
+    color: #1A5A4C;
+
+    @include on-tablet {
+      margin: 0;
+    }
+  }
+
+  &__header {
+    margin: 20px 0 0;
+
+    font-family: Montserrat, sans-serif;
+    font-weight: 400;
+    font-size: 28px;
+    line-height: 100%;
+    color: #0F0E08;
+
+    text-align: center;
+
+    @include on-tablet {
+      margin: 30px 0 15px;
+      font-size: 36px;
+
+      // text-align-last: left;
+    }
+  }
 }
