created the info element from transition section for mobile version

--- a/src/styles/blocks/transition.scss
+++ b/src/styles/blocks/transition.scss
@@ -1,15 +1,22 @@
 .transition {
+  position: relative;
+
   &__image {
+    position: absolute;
+
     width: 100%;
   }
 
   &__info {
+    position: absolute;
+    z-index: 99;
+    top: 153px;
+
     box-sizing: border-box;
     margin: 0 20px;
     padding: 20px 0;
-    background-color: #61e13d;
 
-    // z-index: 99;
+    background-color: #61e13d;
 
     @include on-tablet {
       width: 570px;
@@ -19,19 +26,18 @@
   }
 
   &__time {
-    padding: 0 21px;
-
     display: flex;
-    justify-content: space-between;
     align-items: center;
+    justify-content: space-between;
+    padding: 0 21px;
   }
 
   &__event {
     margin: 0;
 
     font-family: "IBM Plex Sans", sans-serif;
-    font-weight: 500;
     font-size: 16px;
+    font-weight: 500;
     line-height: 100%;
     color: #687480;
   }
@@ -40,8 +46,8 @@
     margin: 0;
 
     font-family: "IBM Plex Sans", sans-serif;
-    font-weight: 700;
     font-size: 16px;
+    font-weight: 700;
     line-height: 150%;
     color: #1A5A4C;
 
@@ -54,11 +60,10 @@
     margin: 20px 0 0;
 
     font-family: Montserrat, sans-serif;
-    font-weight: 400;
     font-size: 28px;
+    font-weight: 400;
     line-height: 100%;
     color: #0F0E08;
-
     text-align: center;
 
     @include on-tablet {
