made the transition section

--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,4 +1,6 @@
-$tablet-min-width: 640px;
+// $tablet-min-width: 640px;
+
+$tablet-min-width: 768px;
 $desktop-min-width: 1280px;
 $design: 1440px;
 $c-gray: #fff;
