--- a/src/styles/blocks/transition.scss
+++ b/src/styles/blocks/transition.scss
@@ -3,25 +3,46 @@
 
   &__image {
     position: absolute;
-
     width: 100%;
+    height: 210px;
+
+    @include on-tablet {
+      box-sizing: border-box;
+      min-height: 390px;
+      max-height: 550px;
+      padding-inline: 34px;
+    }
+
+    @include on-desktop {
+      min-height: 550px;
+      padding-inline: 0;
+    }
   }
 
   &__info {
     position: absolute;
-    z-index: 99;
     top: 153px;
+    left: 6.25%;
 
     box-sizing: border-box;
-    margin: 0 20px;
+    width: 87.5%;
     padding: 20px 0;
 
-    background-color: #61e13d;
+    background-color: #fff;
 
     @include on-tablet {
-      width: 570px;
+      top: 306px;
+      left: 12.89%;
+
+      width: 74.21%;
       margin: 0 auto;
       padding: 45px 100px 50px;
+    }
+
+    @include on-desktop {
+      top: 448px;
+      left: 27.73%;
+      width: 44.53%;
     }
   }
 
@@ -30,6 +51,10 @@
     align-items: center;
     justify-content: space-between;
     padding: 0 21px;
+
+    @include on-tablet {
+      padding: 0;
+    }
   }
 
   &__event {
@@ -40,6 +65,11 @@
     font-weight: 500;
     line-height: 100%;
     color: #687480;
+
+    @include on-tablet {
+      margin: 0;
+      font-size: 14px;
+    }
   }
 
   &__date {
@@ -53,6 +83,7 @@
 
     @include on-tablet {
       margin: 0;
+      font-size: 14px;
     }
   }
 
@@ -67,10 +98,8 @@
     text-align: center;
 
     @include on-tablet {
-      margin: 30px 0 15px;
       font-size: 36px;
-
-      // text-align-last: left;
+      text-align: left;
     }
   }
 }
