--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -5,6 +5,6 @@
 @import './blocks/header';
 @import './blocks/nav';
 @import './blocks/aside';
-@import './blocks/test';
 @import './blocks/relevance';
 @import './blocks/transition';
+@import './blocks/footer';
