made the gallery section for mobile version

--- a/src/styles/blocks/transition.scss
+++ b/src/styles/blocks/transition.scss
@@ -1,8 +1,11 @@
 .transition {
-  position: relative;
+  // position: relative;
+
+  &__wrapper {
+    position: relative;
+  }
 
   &__image {
-    position: absolute;
     width: 100%;
     height: 210px;
 
@@ -29,6 +32,7 @@
     padding: 20px 0;
 
     background-color: #fff;
+    box-shadow: 0 2px #1A5A4C40;
 
     @include on-tablet {
       top: 306px;
