--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -47,10 +47,11 @@
     display: flex;
     flex-direction: row;
     width: 100%;
+    gap: 30px;
 
     @include on-tablet {
       flex-direction: row;
-      justify-content: center;
+      justify-content: space-evenly;
       align-items: flex-start;
       max-width: 60%;
     }
@@ -58,8 +59,10 @@
 
   &-icon-close {
     display: block;
-    padding: 10px;
     align-self: flex-start;
+    margin-bottom: 0;
+  margin-top: 0;
+  padding: 0;
 
     img {
       cursor: pointer;
@@ -71,9 +74,9 @@
   &-nav {
     display: flex;
     flex-wrap: wrap;
-    gap: 30px;
     justify-content: center;
     align-items: center;
+    list-style: none;
 
     @include on-tablet {
       flex-direction: row;
@@ -81,7 +84,11 @@
 
     &-item {
       display: flex;
+      max-width: 170px;
+      margin: 0;
+      padding: 0;
       flex-direction: column;
+      align-items: flex-start;
       gap: 24px;
       list-style: none;
 
@@ -95,6 +102,8 @@
         transition:
           color 0.3s ease,
           transform 0.2s ease;
+          margin: 0;
+          padding: 0;
 
         &:hover {
           text-decoration: underline;
@@ -133,7 +142,7 @@
       text-align: left;
 
       &-title {
-        margin-bottom: 20px;
+  margin-top: 0;
         font-family: $font-primary;
         font-weight: 400;
         font-size: 14px;
@@ -160,12 +169,11 @@
 
       @include on-tablet {
         margin-top: 40px;
-        padding: 10px;
         max-width: 170px;
       }
 
       p {
-        margin: 10px 0;
+        margin: 0;
         font-family: $font-primary;
         font-weight: 400;
         font-size: 14px;
@@ -194,5 +202,6 @@
     opacity: 0.5;
   }
 }
+
 
 
