--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -77,6 +77,7 @@
     justify-content: center;
     align-items: center;
     list-style: none;
+    gap: 30px;
 
     @include on-tablet {
       flex-direction: row;
