add task solution

--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -1,3 +1,9 @@
+body:has(.header__menu:target) {
+  overflow: hidden;
+  position: fixed;
+  width: 100%;
+}
+
 .header__menu {
   position: fixed;
   top: 0;
