--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,27 @@
 @import 'utils';
 @import 'fonts';
 @import 'typography';
+@import 'blocks';
 
-body {
-  background: $c-gray;
+.main {
+  background: #fff;
+  font-family: Montserrat, sans-serif;
+  margin: 0;
+  overflow-x: hidden;
+
+  &--no-scroll {
+    overflow: hidden;
+    height: 100vh;
+  }
+}
+
+@media (max-width: 319px) {
+  .main {
+    overflow-x: scroll;
+    width: 320px;
+  }
+}
+
+html {
+  scroll-behavior: smooth;
 }
