updated links, hover and added type email

--- a/src/styles/blocks/_events.scss
+++ b/src/styles/blocks/_events.scss
@@ -41,10 +41,12 @@
     width: 100%;
     grid-column: 1 / -1;
 
-    @include smooth-scale;
-
     @include on-desktop {
       grid-column: 1 / 8;
+    }
+
+    &--smooth {
+      @include smooth-scale;
     }
   }
 
