--- a/src/styles/blocks/_footer.scss
+++ b/src/styles/blocks/_footer.scss
@@ -102,6 +102,14 @@
     line-height: 150%;
   }
 
+  &__contacts-link {
+    display: block;
+    text-decoration: none;
+    color: #0F0E08;
+
+    @include smooth-scale;
+  }
+
   &__line {
     background-color: #1a5a4c80;
     height: 1px;
