fix phone version

--- a/src/styles/blocks/_header.scss
+++ b/src/styles/blocks/_header.scss
@@ -1,12 +1,12 @@
 .header {
   &__top {
-    width: 100%;
     position: absolute;
     top: 9px;
     display: flex;
     align-items: center;
     gap: 88px;
     z-index: 1;
+    max-width: 100%;
 
     @include content-padding-inline;
 
