--- a/src/styles/blocks/_subscribe.scss
+++ b/src/styles/blocks/_subscribe.scss
@@ -9,13 +9,13 @@
   @include on-tablet {
     height: 390px;
     margin-top: 133px;
-    padding: 82px 154px;
+    padding: 82px 0;
   }
 
   @include on-desktop {
     height: 550px;
     margin-top: 200px;
-    padding: 163px 455px;
+    padding: 163px 0;
   }
 
   &__title {
@@ -43,10 +43,12 @@
 
     @include on-tablet {
       margin-bottom: 64px;
+      padding-inline: 154px;
     }
 
     @include on-desktop {
       margin-bottom: 72px;
+      padding-inline: 455px;
     }
   }
 
