--- a/src/styles/blocks/_gallery.scss
+++ b/src/styles/blocks/_gallery.scss
@@ -35,7 +35,7 @@
     position: relative;
   }
 
-  &__wrapper {
+  &__wrapper.swiper-wrapper {
     display: flex;
     transition-property: transform;
 
@@ -47,20 +47,24 @@
   }
 
   &__slide {
-    flex-shrink: 0;
-    width: 100%;
-    height: 410px;
+    &.swiper-slide {
+      flex-shrink: 0;
+      width: 100%;
+      height: 410px;
+      padding-bottom: 60px;
 
-    @include smooth-scale;
+      @include smooth-scale;
 
-    @include on-tablet {
-      height: 543px;
-      width: 340px;
-    }
+      @include on-tablet {
+        height: 543px;
+        width: 340px;
+        padding-bottom: 0;
+      }
 
-    @include on-desktop {
-      width: auto;
-      height: auto;
+      @include on-desktop {
+        width: auto;
+        height: auto;
+      }
     }
 
     &--first {
@@ -96,10 +100,9 @@
     object-position: top;
   }
 
-  &__pagination {
+  &__pagination.swiper-pagination {
     position: absolute;
     display: flex;
-    transform: translateY(350%);
     gap: 22px;
     justify-content: center;
 
