--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,6 +8,7 @@
   font-family: Montserrat, sans-serif;
   margin: 0;
   overflow-x: hidden;
+  width: 100%;
 
   &--no-scroll {
     overflow: hidden;
