--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,4 +1,102 @@
 %h1 {
-  font-family: Roboto, sans-serif;
+  font-family: Montserrat, sans-serif;
+  font-weight: 700;
+  font-size: 45px;
+  line-height: 100%;
+  letter-spacing: 0;
+  text-align: center;
+  color: $black;
+
+  @include on-tablet {
+    font-size: 54px;
+    line-height: 120%;
+    text-align: left;
+  }
+
+  @include on-desktop {
+    font-size: 72px;
+  }
+}
+
+%h2 {
+  @extend %h1;
+
+  font-size: 36px;
+  color: $font-color;
+
+  @include on-tablet {
+    font-size: 48px;
+    line-height: 100%;
+  }
+}
+
+%h3 {
+  @extend %h1;
+
+  color: $font-color;
   font-weight: 400;
+  font-size: 28px;
+
+  @include on-tablet {
+    font-size: 36px;
+    line-height: 100%;
+  }
+}
+
+%body-text {
+  font-family: 'IBM Plex Sans', sans-serif;
+  font-weight: 300;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0;
+  color: $font-color;
+}
+
+%header-link {
+  @extend %body-text;
+
+  font-weight: 500;
+  line-height: 100%;
+}
+
+%info-text-bold {
+  @extend %body-text;
+
+  font-weight: 600;
+  font-size: 14px;
+  color: $white;
+}
+
+%info-text {
+  @extend %body-text;
+
+  font-weight: 400;
+  font-size: 14px;
+  color: $white;
+}
+
+%label-text {
+  font-family: 'IBM Plex Sans', sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 100%;
+  letter-spacing: 0;
+  color: $label-font-color;
+
+  @include on-tablet {
+    font-size: 14px;
+  }
+}
+
+%cards-date {
+  font-family: 'IBM Plex Sans', sans-serif;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0;
+  color: $green;
+
+  @include on-tablet {
+    font-size: 14px;
+  }
 }
