--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,42 @@
-$c-gray: #eee;
+// #region width screen
+
+$mobile-width: 320px;
+$max-width-content: 1170px;
+$tablet-width: 768px;
+$desktop-width: 1280px;
+
+// #endregion
+
+// #region colors
+$black: #000;
+$black-focus: #00000020;
+$green: #1a5a4c;
+$green-shadow: #1a5a4c40;
+$green-light: #1a5a4c80;
+$white: #fff;
+$orange: #f14a27;
+$grey: #e0e0e0;
+$menu-line: #ffffff50;
+$button-arrow: #d7dde3;
+$font-color: #0f0e08;
+$overlay-bg: #18181a50;
+$label-font-color: #687480;
+
+// #endregion
+
+// #region sizes
+$header-links-height: 50px;
+$header-links-big-height: 70px;
+$header-button-height: $header-links-height;
+$header-button-width: $header-button-height;
+$header-button-big-height: $header-links-big-height;
+$header-button-big-width: $header-button-big-height;
+$events-title-rect-size: 15px;
+$events-title-rect-size-small: 10px;
+$events-title-rect-pos: calc(
+  ($events-title-rect-size - $events-title-rect-size-small) / 2
+);
+$form-button-size: 50px;
+$form-button-size-big: 70px;
+
+// #endregion
