--- a/src/styles/blocks/card.scss
+++ b/src/styles/blocks/card.scss
@@ -1,4 +1,6 @@
 .card {
+  max-width: 1170px;
+  margin: 0 auto;
   @include on-tablet {
     display: grid;
     grid-template-columns: repeat(6, 1fr);
@@ -33,6 +35,7 @@
 
       @include on-desktop {
         height: 550px;
+        margin-inline: -34px;
       }
 
       background-image: url(images/pictures/picture-3-3x.png);
@@ -41,10 +44,6 @@
 
       @include on-tablet {
         grid-column: 1 / -1;
-      }
-
-      @include on-desktop {
-        margin-inline: 0;
       }
     }
   }
