--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -3,6 +3,8 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
+  max-width: 1170px;
+  margin: 0 auto;
 
   @include on-tablet {
     display: grid;
@@ -30,6 +32,11 @@
     background-image: url(images/icones/burger-menu-museum-3x.png);
     background-position: center;
     background-size: cover;
+    transition: transform 0.3s;
+    
+    &:hover {
+      transform: scale(1.2);
+    }
   }
 
   &__image {
