--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -42,6 +42,11 @@
     background-image: url(images/icones/close-museum-3x.png);
     background-position: center;
     background-size: cover;
+    transition: transform 0.3s;
+
+    &:hover {
+      transform: scale(1.2);
+    }
   }
 
   &__line {
