--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -25,5 +25,10 @@
     font-size: 16px;
     line-height: 100%;
     color: $color-white;
+    transition: color 0.3s;
+
+    &:hover {
+      color: #f14a27;
+    }
   }
 }
