--- a/src/styles/blocks/relevance.scss
+++ b/src/styles/blocks/relevance.scss
@@ -1,4 +1,12 @@
 .relevance {
+  @include on-tablet {
+    padding-bottom: 48px;
+  }
+
+  @include on-desktop {
+    padding-bottom: 40px;
+  }
+
   &__image {
     width: 100%;
 
@@ -8,14 +16,14 @@
   }
 
   &__section {
-    margin-bottom: 60px;
+    padding-bottom: 60px;
 
     @include on-tablet {
-      margin-bottom: 64px;
+      padding-bottom: 64px;
     }
 
     @include on-desktop {
-      margin-bottom: 104px;
+      padding-bottom: 104px;
 
       display: flex;
       justify-content: space-between;
