--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -21,13 +21,13 @@
   --column: 2;
 
   display: grid;
-  row-gap: 20px;
+  column-gap: 20px;
   grid-template-columns: repeat(var(--column), 1fr);
 
   @include on-tablet {
     --column: 6;
-    
-    row-gap: 30px;
+
+    column-gap: 30px;
   }
 
   @include on-desktop {
