--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -1,7 +1,39 @@
-body:has(.header__menu:target) {
-  overflow: hidden;
+//  body {
+//    &.is-open {
+//      overflow: hidden;
+//      position: fixed;
+//      width: 100%;
+
+//     .header__overlay {
+//        display: block;
+//        opacity: 1;
+//        pointer-events: auto;
+//      }
+//   }
+//  }
+
+.header__overlay {
+  display: none;
   position: fixed;
-  width: 100%;
+  inset: 0;
+  z-index: 999;
+  background: rgba(117, 115, 115, 0.5);
+  opacity: 0;
+  cursor: pointer;
+  transition: opacity 0.3s ease-in-out;
+  pointer-events: none;
+}
+
+// #menu:target ~ .header__overlay {
+//   display: block;
+//   opacity: 1;
+//   pointer-events: auto;
+// }
+
+body:has(.header__menu:target) .header__overlay {
+  display: block;
+  opacity: 1;
+  pointer-events: auto;
 }
 
 .header__menu {
@@ -59,7 +91,7 @@ body:has(.header__menu:target) {
       flex-direction: row;
       justify-content: space-evenly;
       align-items: flex-start;
-      max-width: 60%;
+      min-width: 40%;
     }
   }
 
@@ -81,7 +113,6 @@ body:has(.header__menu:target) {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    align-items: center;
     list-style: none;
     gap: 30px;
 
@@ -97,6 +128,10 @@ body:has(.header__menu:target) {
       align-items: flex-start;
       gap: 30px;
       list-style: none;
+
+      @include on-desktop{
+        min-width: 170px;
+      }
 
       a {
         text-decoration: none;
@@ -137,14 +172,13 @@ body:has(.header__menu:target) {
       margin-top: 0;
       padding-top: 0;
       padding-inline: 100px;
-      gap: 30px;
-      max-width: 50%;
+      gap: 40px;
+      min-width: 50%;
     }
 
     &-schedule {
       display: flex;
       flex-direction: column;
-      gap: 10px;
       text-align: left;
 
       &-title {
@@ -174,7 +208,7 @@ body:has(.header__menu:target) {
       margin-top: 16px;
 
       @include on-tablet {
-        margin-top: 40px;
+        margin-top: 30px;
         max-width: 170px;
       }
 
@@ -189,25 +223,5 @@ body:has(.header__menu:target) {
     }
   }
 }
-
-.header__overlay {
-  display: none;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 999;
-  cursor: pointer;
-  background: rgba(117, 115, 115, 0.5);
-  opacity: 0;
-  transition: opacity 0.3s ease-in-out;
-
-  &.is-visible {
-    display: block;
-    opacity: 0.5;
-  }
-}
-
 
 
