add task solution

--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -17,6 +17,12 @@ body:has(.header__menu:target) .header__overlay {
   pointer-events: auto;
 }
 
+body:has(.header__menu:target) {
+  overflow: hidden;
+  position: fixed;
+  width: 100%;
+}
+
 .header__menu {
   position: fixed;
   top: 0;
