--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -1,9 +1,100 @@
 .footer {
-  width: 100%;
-  height: 100px;
-  background-color: #e2a624;
+  position: relative;
+  padding: 50px 0 60px;
+
+  @include on-tablet {
+    padding: 51px 0 36px;
+  }
+
+  @include on-desktop {
+    padding: 47px 0 35px;
+  }
+
+  &__arrow {
+    display: flex;
+    cursor: pointer;
+    justify-content: flex-end;
+
+    @include on-tablet {
+      display: none;
+    }
+  }
+
+  &__line {
+    height: 1px;
+    margin: 20px 0 40px;
+    opacity: 50%;
+    background-color: #1A5A4C80;
+
+
+    @include on-tablet {
+      margin: 64px 0;
+    }
+
+    @include on-desktop {
+      margin: 0 65px;
+    }
+  }
+
+  &-nav {
+    display: flex;
+    align-items: start;
+    justify-content: space-between;
+
+    &__list {
+      width: 100px;
+      margin: 0;
+      padding: 0;
+
+      font-family: "IBM Plex Sans", sans-serif;
+      font-size: 14px;
+      font-weight: 400;
+      line-height: 100%;
+    }
+
+    &__item {
+      width: 130px;
+      list-style: none;
+
+      @include on-tablet {
+        width: 220px;
+      }
+
+      @include on-desktop {
+        width: 169px;
+      }
+    }
+
+    &__item:first-child {
+      margin-bottom: 24px;
+    }
+
+    &__link {
+      color: #0F0E08;
+      text-decoration: none;
+    }
+  }
+
+  &__cor {
+    margin-top: 80px;
+
+    font-family: "IBM Plex Sans", sans-serif;
+    font-size: 12px;
+    font-weight: 300;
+    line-height: 141%;
+    color: #0F0E08;
+    text-align: center;
+
+    @include on-tablet {
+      display: flex;
+      justify-content: space-between;
+      margin-top: 120px;
+    }
+
+    @include on-desktop {
+      margin-top: 87px;
+    }
+  }
 }
 
-hr {
-  height: 30px;
-}
+
