made the footer

--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -1,12 +1,7 @@
-// html {
-//   margin: 0;
-// }
-
 body {
   margin: 0;
-  background: $c-gray;
-
   scroll-behavior: smooth;
+  background: $c-gray;
 }
 
 body:has(aside:target) {
@@ -20,24 +15,25 @@ body:has(aside:target) {
 }
 
 .section__title {
-  margin: 0;
-  margin-bottom: 40px;
-  text-align: center;
-
-  @include on-tablet {
-    margin-bottom: 48px;
-    text-align: left;
-    font-size: 48px;
-  }
-
-  @include on-desktop {
-    margin-bottom: 56px;
-  }
+  margin: 0 0 40px;
 
   font-family: Montserrat, sans-serif;
   font-weight: 700;
   font-size: 36px;
   line-height: 100%;
+
+  text-align: center;
+
+  @include on-tablet {
+    margin-bottom: 48px;
+    font-size: 48px;
+
+    text-align: left;
+  }
+
+  @include on-desktop {
+    margin-bottom: 56px;
+  }
 }
 
 
