--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -1,9 +1,28 @@
 .nav {
   display: flex;
+  gap: 28px;
   align-items: start;
-  justify-content: space-between;
 
-  // background-color: #dabb3f;
+  &__close {
+    display: flex;
+
+    @include on-tablet {
+      display: none;
+    }
+  }
+
+  &__wrapper {
+    display: flex;
+    gap: 28px;
+
+    @include on-tablet {
+      gap: 20px;
+    }
+
+    @include on-desktop {
+      gap: 31px;
+    }
+  }
 
   &__list {
     width: 100px;
@@ -14,6 +33,17 @@
     font-size: 16px;
     font-weight: 500;
     line-height: 100%;
+
+    @include on-tablet {
+      // width: 130px;
+      // padding-top: 39px;
+      // padding: 39px 0;
+    }
+
+    @include on-desktop {
+      width: 169px;
+      font-size: 22px;
+    }
   }
 
   &__item {
