--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -1,7 +1,10 @@
 .subscription {
   padding: 88px 0;
-  object-fit: cover;
+  
   background-image: url(../images/subscription/subscription-bg.png);
+  background-repeat: no-repeat;
+  background-size: auto;
+  background-size:cover;
 
   @include on-tablet {
     padding: 82px 0;
